--- a/requirements.txt
+++ b/requirements.txt
@@ -1,362 +1,111 @@
-absl-py==0.15.0
-aiohttp==3.7.4.post0
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-anaconda-client==1.7.2
-anaconda-navigator==2.0.3
-anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1610472525955/work
-anyio @ file:///C:/ci/anyio_1620153418380/work/dist
-appdirs==1.4.4
-argh==0.26.2
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
 asgiref==3.4.1
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid==2.8.2
-astropy @ file:///C:/ci/astropy_1617745647203/work
-astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==21.2.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work
-Babel==2.9.1
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.entry-points-selectable==1.1.0
-backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
-backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil_get_terminal_size_1608222128777/work
-backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
-backports.weakref==1.0.post1
-bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
-beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
-bitarray @ file:///C:/ci/bitarray_1618435038389/work
-bkcharts==0.2
-black==21.9b0
-bleach==4.0.0
-bokeh @ file:///C:/ci/bokeh_1620784067744/work
-boto==2.49.0
-boto3==1.13.10
-botocore==1.16.10
-Bottleneck==1.3.2
-Brotli==1.0.7
-brotlipy==0.7.0
-cachetools==4.2.4
+asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
+beniget==0.4.1
+blinker==1.4
+catboost==1.0.3
 category-encoders==2.3.0
-certifi==2020.4.5.1
-cffi==1.14.6
+certifi==2018.1.18
 chardet==3.0.4
-charset-normalizer==2.0.4
-click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-comtypes==1.1.9
-conda==4.10.1
-conda-build==3.21.4
-conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
-conda-package-handling @ file:///C:/ci/conda-package-handling_1618262320430/work
-conda-repo-cli @ file:///tmp/build/80754af9/conda-repo-cli_1620168426516/work
-conda-token @ file:///tmp/build/80754af9/conda-token_1620076980546/work
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-cryptography @ file:///C:/ci/cryptography_1616769344312/work
-cycler==0.10.0
-Cython @ file:///C:/ci/cython_1618435363327/work
-cytoolz==0.11.0
-dash==1.12.0
-dash-core-components==1.10.0
-dash-html-components==1.0.3
-dash-renderer==1.4.1
-dash-table==4.7.0
-dask==2.30.0
-dataprep==0.3.0
-debugpy==1.4.1
-decorator==5.1.0
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distlib==0.3.2
-distributed @ file:///C:/ci/distributed_1617384289923/work
-Django==3.2.9
+charset-normalizer==2.0.9
+click==6.7
+cloud-init==21.3
+colorama==0.3.7
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.1.4
+cycler==0.11.0
+Cython==0.29.26
+defusedxml==0.7.1
+diff-match-patch==20200713
+distro-info===0.18ubuntu0.18.04.1
+dj-static==0.0.6
+Django==3.2.10
 django-crispy-forms==1.13.0
 django-embed-video==1.4.0
-django-js-routes==0.1.4
+django-import-export==2.7.1
+django-js-routes==0.2.0
 django-password-validators==1.6.1
-django-plotly-dash==1.6.6
+django-rename-app==0.1.3
 django-session-timeout==0.1.0
 Django-Verify-Email==1.0.9
-docutils==0.15.2
-dpd-components==0.1.0
 dython==0.6.8
-e==1.4.5
-entrypoints==0.3
 et-xmlfile==1.1.0
-fastcache==1.1.0
-filelock @ file:///home/linux1/recipes/ci/filelock_1610993975404/work
-flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-Flask-Caching==1.8.0
-Flask-Compress==1.5.0
-flatbuffers==2.0
-folderstats==0.3.0
-fsspec @ file:///tmp/build/80754af9/fsspec_1617959894824/work
-future==0.18.2
-fuzzywuzzy==0.18.0
-gast==0.4.0
-gevent @ file:///C:/ci/gevent_1616773090559/work
-glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-google-auth==2.3.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphviz==0.17
-greenlet @ file:///C:/ci/greenlet_1611958565931/work
-grpcio==1.41.1
-gunicorn==20.0.4
-h5py==2.10.0
-HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-htmlmin==0.1.12
-idna==2.9
-imagecodecs @ file:///C:/ci/imagecodecs_1617996768495/work
-ImageHash==4.2.1
-imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-importlib-metadata==4.8.1
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel==6.2.0
-ipython==7.27.0
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets==7.6.5
-isort==5.9.3
-ISR==2.2.0
-itsdangerous @ file:///home/ktietz/src/ci/itsdangerous_1611932585308/work
-jdcal==1.4.1
-jedi==0.18.0
-Jinja2==2.11.2
-jmespath==0.10.0
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-json5==0.9.6
-jsonpath-ng==1.5.3
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter==1.0.0
-jupyter-client==7.0.1
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyter-packaging @ file:///tmp/build/80754af9/jupyter-packaging_1613502826984/work
-jupyter-server @ file:///C:/ci/jupyter_server_1616084298403/work
-jupyterlab==3.1.7
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server==2.8.1
-jupyterlab-widgets==1.0.2
-keras==2.7.0rc0
-Keras-Preprocessing==1.1.2
-keyring @ file:///C:/ci/keyring_1614616910860/work
+fonttools==4.28.5
+gast==0.5.3
+graphviz==0.19.1
+gunicorn==20.1.0
+httplib2==0.9.2
+hyperlink==17.3.1
+idna==2.6
+incremental==16.10.1
+Jinja2==2.10
+joblib==1.1.0
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
+keyring==10.6.0
+keyrings.alt==3.0
 kiwisolver==1.3.2
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529307648/work
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-libclang==12.0.0
-llvmlite==0.37.0
-locket==0.2.1
-lxml @ file:///C:/ci/lxml_1616443455957/work
-Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-menuinst==1.4.16
-Metaphone==0.6
-missingno==0.4.2
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random @ file:///C:/ci/mkl_random_1618854156666/work
-mkl-service==2.3.0
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1613676688952/work
-mpmath==1.2.1
-msgpack @ file:///C:/ci/msgpack-python_1612287368835/work
-multidict==5.2.0
-multimethod==1.4
-multipledispatch==0.6.0
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert==6.1.0
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx==2.6.3
-nltk @ file:///tmp/build/80754af9/nltk_1618327084230/work
-nose @ file:///tmp/build/80754af9/nose_1606773131901/work
-notebook==6.4.3
-numba==0.54.0
-numexpr @ file:///C:/ci/numexpr_1618856738664/work
-numpy==1.18.4
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauthlib==3.1.1
-olefile==0.46
-opencv-python==4.5.4.58
+language-selector==0.1
+MarkupPy==1.14
+MarkupSafe==1.0
+matplotlib==3.5.1
+netifaces==0.10.4
+numpy==1.21.5
+oauthlib==2.0.6
+odfpy==1.4.1
 openpyxl==3.0.9
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.3.4
-pandas-profiling==3.1.0
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
-parso==0.8.2
-partd @ file:///tmp/build/80754af9/partd_1618000087440/work
-path @ file:///C:/ci/path_1614022440181/work
-pathlib2 @ file:///C:/ci/pathlib2_1607025069150/work
-pathspec==0.9.0
+packaging==21.3
+PAM==0.4.2
+pandas==1.3.5
 patsy==0.5.2
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-phik==0.11.2
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==7.1.2
-pipenv==2021.5.29
-pkginfo==1.7.0
-platformdirs==2.4.0
-plotly==4.7.1
-pluggy @ file:///C:/ci/pluggy_1615976358795/work
+pexpect==4.2.1
+Pillow==8.4.0
+plotly==5.5.0
 ply==3.11
-probableparsing==0.0.1
-prometheus-client==0.11.0
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-protobuf==4.0.0rc2
-psutil @ file:///C:/ci/psutil_1612298324802/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-pyaml==21.10.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycurl==7.43.0.6
-pydantic==1.8.2
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
-pydot==1.4.2
-pyerfa @ file:///C:/ci/pyerfa_1619391071834/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments==2.10.0
-pylint==2.11.1
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
-PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyreadline==2.1
-pyrsistent==0.18.0
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-pytest==6.2.3
-python-crfsuite==0.9.7
-python-dateutil==2.8.1
-python-dotenv==0.13.0
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
-python-Levenshtein==0.12.2
-python-snap7==1.1
-pytz==2020.1
-PyWavelets @ file:///C:/ci/pywavelets_1601658407916/work
-pywin32==228
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==22.2.1
-QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
-QtPy==1.9.0
-redis==3.5.1
-regex==2020.11.13
-requests==2.23.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa==4.7.2
-Rtree @ file:///C:/ci/rtree_1618421009405/work
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016967756/work
-s3transfer==0.3.3
-scikit-image==0.18.1
-scikit-learn @ file:///C:/ci/scikit-learn_1614446896245/work
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pybind11==2.9.0
+pycrypto==2.6.1
+PyGObject==3.26.1
+PyJWT==1.5.3
+pyOpenSSL==17.5.0
+pyparsing==3.0.6
+pyserial==3.4
+python-apt==1.6.5+ubuntu0.7
+python-dateutil==2.8.2
+python-debian==0.1.32
+pythran==0.11.0
+pytz==2021.3
+pyxdg==0.25
+PyYAML==3.12
+requests==2.26.0
+requests-unixsocket==0.1.5
+scikit-learn==1.0.2
 scikit-plot==0.3.7
-scipy==1.4.1
+scipy==1.7.3
 seaborn==0.11.2
-Send2Trash==1.8.0
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
-sip==4.19.13
-six==1.14.0
-sniffio @ file:///C:/ci/sniffio_1614030707456/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1620777493457/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///C:/ci/spyder_1616776239898/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1614030842607/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1618090063261/work
+SecretStorage==2.3.1
+service-identity==16.0.0
+six==1.16.0
+sos==4.1
 sqlparse==0.4.2
-statsmodels==0.13.0
-sympy @ file:///C:/ci/sympy_1618255511605/work
-tables==3.6.1
-tangled-up-in-unicode==0.1.0
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0rc1
-tensorflow-estimator==2.7.0rc0
-tensorflow-io-gcs-filesystem==0.21.0
-termcolor==1.1.0
-terminado==0.9.4
-testpath==0.5.0
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tifffile @ file:///tmp/build/80754af9/tifffile_1619636090847/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli==1.2.1
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-toptec==0.0.0
-torch==1.10.0
-torchvision==0.11.1
-tornado @ file:///C:/ci/tornado_1606942392901/work
-tqdm==4.62.3
-traitlets==5.1.0
-typed-ast @ file:///C:/ci/typed-ast_1610466535590/work
-typing-extensions==3.10.0.2
-ujson @ file:///C:/ci/ujson_1611241570789/work
-unicodecsv==0.14.1
-urllib3==1.25.9
-usaddress==0.5.10
-virtualenv==20.7.2
-virtualenv-clone==0.5.7
-visions==0.7.4
-watchdog @ file:///C:/ci/watchdog_1612471251191/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-widgetsnbextension==3.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-win-unicode-console==0.5
-wincertstore==0.2
-wordcloud==1.8.1
-wrapt==1.12.1
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1617224712951/work
-xlwings==0.23.0
+ssh-import-id==5.7
+static3==0.7.0
+statsmodels==0.13.1
+systemd-python==234
+tablib==3.1.0
+tenacity==8.0.1
+threadpoolctl==3.0.0
+Twisted==17.9.0
+typing_extensions==4.0.1
+ubuntu-advantage-tools==27.2
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+xlrd==2.0.1
 xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-yarl==1.7.0
-zict==2.0.0
-zipp==3.5.0
-zope.event==4.5.0
-zope.interface @ file:///C:/ci/zope.interface_1616357322857/work
+zope.interface==4.3.2
